# xray_re-tools

./: .gitignore  CMakeLists.txt  README.md  appveyor.yaml  appveyor.yml
bld-vs2015/: CMakeLists.txt  EngineToolset_vs2015.sln
bld-vs2015/CMake/: FindLZO.cmake
sources/3rd party/: CMakeLists.txt
sources/3rd party/Maya_2019_2/include/maya/: M3dView.h  MAddRemoveAttrEdit.h  MAngle.h  MAnimControl.h  MAnimCurveChange.h  (+473 more)
sources/3rd party/Maya_2019_2/lib/: OpenMayaAnim.lib
sources/3rd party/dx8sdk/libraries/: d3dx8.lib
sources/3rd party/libogg/: CHANGES  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  libogg.spec  ogg-uninstalled.pc.in
sources/3rd party/libogg/doc/: Makefile.am  Makefile.in  framing.html  index.html
sources/3rd party/libogg/include/: Makefile.in
sources/3rd party/libogg/macosx/: Ogg_Prefix.pch
sources/3rd party/libogg/src/: Makefile.in  bitwise.c  framing.c
sources/3rd party/libogg/win32/: Makefile  Makefile.in
sources/3rd party/libvorbis/: CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.sub  configure  configure.ac  libvorbis.spec  vorbis.pc.in  vorbisenc.pc.in  vorbisfile.pc.in
sources/3rd party/libvorbis/doc/: 01-introduction.tex  03-codebook.tex  04-codec.tex  05-comment.tex  06-floor0.tex  07-floor1.tex  08-residue.tex  09-helper.tex  10-tables.tex  Makefile.am  Makefile.in  Vorbis_I_spec.css  Vorbis_I_spec.html  Vorbis_I_spec.tex  footer.tex  vorbis.html
sources/3rd party/libvorbis/examples/: Makefile.in  seeking_example.c
sources/3rd party/libvorbis/lib/: Makefile.in  block.c  codebook.c  codebook.h  floor0.c  floor1.c  info.c  os.h  psy.c  res0.c  sharedbook.c  vorbisenc.c  vorbisfile.c  window.c
sources/3rd party/libvorbis/m4/: Makefile.in
sources/3rd party/libvorbis/test/: Makefile.am  Makefile.in  test.c  util.c  util.h  write_read.c  write_read.h
sources/3rd party/libvorbis/vq/: Makefile.in  bookutil.c  huffbuild.c
sources/3rd party/milkshape_sdk/: zipsdk.bat
sources/3rd party/nvtt/: nvconfig.h
sources/3rd party/nvtt/bld-vs2005/: nvtt.vcproj
sources/3rd party/nvtt/bld-vs2008/: nvtt.depend  nvtt.vcproj
sources/3rd party/nvtt/bld-vs2010/: nvtt.vcxproj
sources/3rd party/nvtt/bld-vs2015/: CMakeLists.txt  nvtt.vcxproj
sources/3rd party/nvtt/nvcore/: BitArray.h  CMakeLists.txt  Containers.h  Debug.cpp  Debug.h  DefsGnucDarwin.h  DefsGnucLinux.h  DefsGnucWin32.h  DefsVcWin32.h  Library.h  Memory.cpp  Memory.h  Prefetch.h  Ptr.h  Radix.cpp  Radix.h  StdStream.h  StrLib.cpp  StrLib.h  Stream.h  TextReader.cpp  TextReader.h  TextWriter.cpp  TextWriter.h  Tokenizer.cpp  Tokenizer.h  nvcore.h
sources/3rd party/nvtt/nvimage/: BlockDXT.cpp  CMakeLists.txt  ColorBlock.h  ConeMap.h  DirectDrawSurface.cpp  DirectDrawSurface.h  Filter.cpp  Filter.h  FloatImage.cpp  FloatImage.h  HoleFilling.cpp  HoleFilling.h  Image.cpp  Image.h  ImageIO.cpp  ImageIO.h  NormalMap.cpp  NormalMipmap.cpp  NormalMipmap.h  PixelFormat.h  PsdFile.h  Quantize.cpp  Quantize.h  TgaFile.h  nvimage.h
sources/3rd party/nvtt/nvmath/: Box.h  CMakeLists.txt  Color.h  Matrix.h  Montecarlo.cpp  Montecarlo.h  Plane.cpp  Plane.h  Quaternion.h  Random.cpp  Random.h  SphericalHarmonic.cpp  SphericalHarmonic.h  TriBox.cpp  Triangle.cpp  Triangle.h  Vector.h  nvmath.h
sources/3rd party/nvtt/nvtt/: CMakeLists.txt  SingleColorLookup.h
sources/plugins/max_object/bld-vs2015/: CMakeLists.txt  max_object90.vcxproj
sources/plugins/maya_tools/bld-vs2015/: CMakeLists.txt  maya_tools.vcxproj
sources/plugins/ms3d_export/bld-vs2015/: CMakeLists.txt  ms3d_export.vcxproj
sources/utils/aiwrapper/bld-vs2015/: CMakeLists.txt  aiwrapper.vcxproj
sources/utils/converter/: CMakeLists.txt  batch_helper.cxx  batch_helper.h  converter.cxx  converter.h  db_tools.cxx  db_tools.h  dds_tools.cxx  dds_tools.h  dm_tools.cxx  dm_tools.h  fancy_tools.cxx  fancy_tools.h  level_aux_mesh.cxx  level_aux_mesh.h  level_mesh.cxx  level_mesh.h  level_mesh_commit.cxx  level_mesh_materials.cxx  level_tools.cxx  level_tools.h  level_tools_ai_map.cxx  level_tools_details.cxx  level_tools_glows.cxx  level_tools_sectors.cxx  level_tools_sound_envs.cxx  level_tools_sound_srcs.cxx  level_tools_visuals.cxx  object_tools.cxx  object_tools.h  ogf_tools.cxx  ogf_tools.h  ogg_tools.cxx  ogg_tools.h  tools_base.h  xrdemo_tools.cxx  xrdemo_tools.h
sources/utils/converter/bld-vs2015/: CMakeLists.txt  converter.vcxproj  converter.vcxproj.filters
sources/utils/converter/crc32/: crc32.c
sources/utils/converter/opcode/: OPC_AABBCollider.cpp  OPC_AABBTree.cpp  OPC_BaseModel.cpp  OPC_BoxPruning.cpp  OPC_Collider.cpp  OPC_Common.cpp  OPC_HybridModel.cpp  OPC_IceHook.h  OPC_LSSCollider.cpp  OPC_MeshInterface.cpp  OPC_MeshInterface.h  OPC_Model.cpp  OPC_OBBCollider.cpp  OPC_OptimizedTree.cpp  OPC_OptimizedTree.h  OPC_Picking.cpp  OPC_PlanesCollider.cpp  OPC_PlanesCollider.h  OPC_RayCollider.cpp  OPC_SphereCollider.cpp  OPC_SweepAndPrune.cpp  OPC_TreeBuilders.cpp  OPC_TreeCollider.cpp  OPC_TreeCollider.h  OPC_VolumeCollider.cpp  Opcode.cpp  StdAfx.cpp
sources/utils/make_ogf/: CMakeLists.txt  make_ogf.vcxproj  make_ogf2005.vcproj
sources/utils/parsers/parse_lev/: CMakeLists.txt  parse_lev.cpp  parse_lev.vcproj  parse_lev.vcxproj
sources/xray_re/: CMakeLists.txt  xr_ai_cross_table.h  xr_ai_map.h  xr_ai_way.h  xr_bone.cxx  xr_bone.h  xr_build_err.cxx  xr_build_err.h  xr_build_lights.cxx  xr_cl_parser.cxx  xr_clsid.cxx  xr_d3d_light.h  xr_dm.cxx  xr_dm.h  xr_entity.cxx  xr_entity.h  xr_entity_factory.cxx  xr_entity_la.cxx  xr_entity_la.h  xr_envelope.cxx  xr_envelope.h  xr_file_system.cxx  xr_file_system_posix.cxx  xr_file_system_posix.h  xr_file_system_win32.cxx  xr_file_system_win32.h  xr_game_graph.cxx  xr_game_graph.h  xr_game_spawn.cxx  xr_game_spawn.h  xr_gamemtls_lib.cxx  xr_geom_buf.h  xr_guid.h  xr_image_dds.cxx  xr_image_tga.cxx  xr_influence.h  xr_ini_file.cxx  xr_ini_file.h  xr_level.cxx  xr_level_ai.cxx  (+87 more)
sources/xray_re/bld-vs2010/: xray_re.sln  xray_re.vcxproj
sources/xray_re/bld-vs2015/: CMakeLists.txt  xray_re.vcxproj  xray_re.vcxproj.filters
(+2752 files in other folders)
